# iberian2025-ds

./: .gitignore  README.md  anomaly_predictions.json  pyproject.toml  xgboost_model_task3.pickle
.history/: .gitignore_20250329115555  .gitignore_20250329115601
.history/models/: model_task_2_20250329122740.py  model_task_2_20250329122742.py  model_task_2_20250329122746.py  model_task_2_20250329122747.py  model_task_2_20250329122754.py  model_task_2_20250329122844.py  model_task_3_20250329131846.py  model_task_3_20250329131855.py  model_task_3_20250329131859.py  model_task_3_20250329131901.py  model_task_3_20250329131902.py  model_task_3_20250329131904.py  model_task_3_20250329131905.py  model_task_3_20250329131908.py  model_task_3_20250329132349.py  model_task_3_20250329132357.py  model_task_3_20250329132403.py  model_task_3_20250329132405.py  model_task_3_20250329132411.py  model_task_3_20250329132435.py  model_task_3_20250329132440.py  model_task_3_20250329132445.py  model_task_3_20250329132452.py  model_task_3_20250329132454.py  model_task_3_20250329132758.py  model_task_3_20250329133029.py  model_task_3_20250329133037.py  model_task_3_20250329133038.py  model_task_3_20250329133042.py  model_task_3_20250329133043.py  model_task_3_20250329133102.py  model_task_3_20250329133106.py  model_task_3_20250329133110.py  model_task_3_20250329133112.py  (+1038 more)
models/: forecast_instrument_model.py  forecast_model.py  model_task_2.py  model_task_3.py  xgboost_model_task3.pickle
predictions/: predictions_task_2.json  predictions_task_3.json  questions.json
src/data/: questions.py  (+1 more)
(+279 files in other folders)
